--- a/translations/he.json
+++ b/translations/he.json
@@ -2,5 +2,10 @@
   "HomePage": {
     "title": "ברוכים הבאים",
     "about": "Go to the about page"
+  },
+  "Header": {
+    "home": "בית",
+    "story": "הסיפור שלנו",
+    "about": "עלינו"
   }
 }
